--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,25 +1,21 @@
-/* ContactList.module.css */
 
-/* Genel liste düzeni */
 .contactList {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  list-style-type: none; /* Liste madde işaretlerini kaldır */
-  padding: 0; /* İç padding sıfırlama */
-  margin: 0; /* Margin sıfırlama */
-  width: 100%; /* Liste genişliği */
-  margin: 0 auto; /* Listeyi ortala */
+  list-style-type: none; 
+  width: 100%; 
+  margin: 20px auto; 
 }
 
-/* Liste öğeleri */
+
 .contactList li {
-  background-color: #f9f9f9; /* Arka plan rengi */
-  margin-bottom: 15px; /* Alt boşluk */
-  padding: 15px; /* İçerik padding */
-  border-radius: 8px; /* Köşe yuvarlama */
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4); /* Hafif gölge */
+  background-color: #f9f9f9; 
+  margin-bottom: 15px; 
+  padding: 15px; 
+  border-radius: 8px; 
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4); 
   display: flex;
-  flex-direction: column; /* İçeriği dikey sıralama */
-  gap: 10px; /* Elemanlar arasındaki boşluk */
+  flex-direction: column; 
+  gap: 10px;
 }
